Removed setOnClickListener on button as the method reference is given to button in design

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -27,4 +27,12 @@
         android:layout_marginTop="44dp"
         android:onClick="goBack"
         android:text="@string/btn_secondActivity" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="199dp"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="134dp" />
 </RelativeLayout>
