--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/firstactivityimage">
 
     <TextView
+        android:id="@+id/textViewFirstActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
